# habib

./: ChangeLog.md  README.md  habib.cabal  package.yaml  shelah.bib
.github/workflows/: main.yml
app/: Main.hs
src/: Habib.hs  Lib.hs
src/Text/Habib/: Parsers.hs  Types.hs
test/: Spec.hs
