cabal-version:      3.0
name:               habib
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             tetrapharmakon
maintainer:         mail@mail.com
-- copyright:
category:           Text
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall -O2

library
    import:           warnings
    exposed-modules:  Text.Habib.Parsers
    -- other-modules:
    -- other-extensions:
    build-depends:    attoparsec >= 0.14.4,
                      base ^>=4.17.2.1,
                      parsec >= 3.1.16.1,
                      parsec >= 3.1.16.1,
                      text >= 2.0.2
    hs-source-dirs:   src
    default-language: Haskell2010

executable habib
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    attoparsec >= 0.14.4,
                      base ^>=4.17.2.1,
                      parsec >= 3.1.16.1,
                      parsec >= 3.1.16.1,
                      text >= 2.0.2,
                      habib

    hs-source-dirs:   app
    default-language: Haskell2010

--test-suite habib-test
--    import:           warnings
--    default-language: Haskell2010
--    -- other-modules:
--    -- other-extensions:
--    type:             exitcode-stdio-1.0
--    hs-source-dirs:   test
--    main-is:          Main.hs
--    build-depends:
--                  attoparsec >= 0.14.4,
--                  base ^>=4.17.2.1,
--                  habib,
--                  parsec >= 3.1.16.1,
--                  parsec >= 3.1.16.1,
--                  text >= 2.0.2

